--- a/css/core.css
+++ b/css/core.css
@@ -7,6 +7,7 @@ body {
   padding-bottom: 3rem;
   color: #5a5a5a;
   background-image: url("../images/background.jpg");
+  background-size: 334px 667px;
   background-repeat: repeat;
 }
 
