--- a/css/core.css
+++ b/css/core.css
@@ -5,7 +5,7 @@
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  color: #5a5a5a;
+  color: #efefef;
   background-image: url("../images/background.jpg");
   background-size: 334px 667px;
   background-repeat: repeat;
