--- a/css/core.css
+++ b/css/core.css
@@ -9,6 +9,12 @@ body {
 }
 
 #background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter:alpha(opacity=80);
   background-image: url("../images/background.jpg");
   background-size: 650px 425px;
   background-color: #0e0e0e;
