--- a/css/core.css
+++ b/css/core.css
@@ -15,13 +15,11 @@ body {
   width: 100%;
   height: 100%;
   filter:alpha(opacity=80);
-  background-image: url("../images/background.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/background.jpg");
   background-size: 650px 425px;
   background-color: #0e0e0e;
   background-repeat: repeat;
   background-attachment: fixed;
-  opacity: 1;
-  background:rgba(0,0,0,0.5);
 }
 
 /* CUSTOMIZE THE CAROUSEL
