--- a/css/core.css
+++ b/css/core.css
@@ -24,6 +24,8 @@ body {
 .container-background {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 25px;
+  width: 107%;
+  height: 100%;
 }
 
 /* CUSTOMIZE THE CAROUSEL
