--- a/css/core.css
+++ b/css/core.css
@@ -28,7 +28,9 @@ body {
   height: 100%;
 }
 
-.row .featurette {
+.row {
+  margin-left: -50px;
+  margin-right: -50px;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 20px;
 }
