--- a/css/main.css
+++ b/css/main.css
@@ -1529,6 +1529,9 @@ h1,h2,h3,h4,h5,h6{
 	box-shadow:-21.213px 21.213px 30px 0px rgba(158,158,158,0.3);
     background:rgba(34,34,34,0.9)
 }
+#header .nav-menu a{
+	color:#fff
+}
 #header.header-scrolled{
     box-shadow:-21.213px 21.213px 30px 0px rgba(158,158,158,0.3);
     background:rgba(34,34,34,0.9);
