--- a/css/main.css
+++ b/css/main.css
@@ -2345,3 +2345,14 @@ body.mobile-nav-active #mobile-nav-toggle{
 .switch-wrap p{
     margin:0
 }
+.mapouter{
+	text-align:right;
+	height:100%;
+	width:100%;
+}
+.gmap_canvas{
+	overflow:hidden;
+	background:none!important;
+	height:100%;
+	width:100%;
+}
