Update contact info, and make the max width for the description 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -706,7 +706,7 @@
 .pb_cover_v4 .sub-heading {
 	font-size: 20px;
 	color: rgba(255, 255, 255, 0.8);
-	max-width: 600px;
+	max-width: 100%;
 	float: left;
 }
 
