--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,13 @@
 	margin-top: 5% !important;
 }
 
-@media (min-width: 800px) and (max-width: 991px) {
+@media only screen and (min-device-width: 800px) and (max-device-width: 991px) {
 	.top-header {
 		margin-top: 15% !important;
 	}
 }
 
-@media (min-width: 400px) and (max-width: 800px) {
+@media only screen and (min-device-width: 400px) and (max-device-width: 800px) {
 	.top-header {
 		margin-top: 25% !important;
 	}
