--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,14 @@
 	font-style: normal;
 }
 
+#underConstruction {
+    top: 200px;
+	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 0;
+	border-radius: 0;
+}
+
 @media only screen and (min-device-height: 991px) {
 	.description {
 	    font-size: 15px !important;
