--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@
 	border-radius: 0;
 }
 
+.facebookIFrame {
+	min-width: 180px;
+	width: 340px;
+}
+
 @media only screen and (min-device-height: 991px) {
 	.description {
 	    font-size: 15px !important;
