--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,14 @@
 }
 
 .top-banner {
-	position: absolute !important;
-	left: 0 !important;
-	z-index: 100 !important;
-	width: 100% !important;
-	font-family: "Montserrat", Arial, sans-serif !important;
-	color: rgba(255, 255, 255, 0.7) !important;
-	text-align: center !important;
-	background-color: #222222 !important;
+	position: absolute;
+	left: 0;
+	z-index: 100;
+	width: 100%;
+	font-family: "Montserrat", Arial, sans-serif;
+	color: rgba(255, 255, 255, 0.7);
+	text-align: center;
+	background-color: #222222;
 }
 
 #underConstruction {
