--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,10 @@
 	z-index: 100;
 	width: 100%;
 	font-family: "Montserrat", Arial, sans-serif;
-	color: rgba(255, 255, 255, 0.7);
+	color: rgba(255, 255, 255, 0.9);
 	text-align: center;
-	background-color: #222222;
+	top: 225px;
+	font-size: 20px;
 }
 
 .banner-quote {
@@ -84,9 +85,9 @@
 		z-index: 100;
 		width: 100%;
 		font-size: 10px;
-		color: rgba(255, 255, 255, 0.7);
+		color: rgba(255, 255, 255, 0.9);
 		text-align: center;
-		background-color: #222222;
+		top: 100px;
 	}
 	
 	.pb_navbar {
@@ -119,9 +120,9 @@
 		z-index: 100;
 		width: 100%;
 		font-size: 10px;
-		color: rgba(255, 255, 255, 0.7);
+		color: rgba(255, 255, 255, 0.9);
 		text-align: center;
-		background-color: #222222;
+		top: 100px;
 	}
 	
 	.pb_navbar {
