switch menu to iframe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,16 @@
 	font-style: normal;
 }
 
+.menu-iframe {
+	position: relative;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+	width: 100%;
+	height: 1000px;
+}
+
 .top-banner {
 	position: absolute;
 	left: 0;
