--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@
 	font-family: "Montserrat", Arial, sans-serif;
 	color: rgba(255, 255, 255, 0.9);
 	text-align: center;
-	top: 225px;
+	top: 250px;
 	font-size: 20px;
 }
 
@@ -52,6 +52,11 @@
 .facebookIFrame {
 	min-width: 180px;
 	width: 340px;
+}
+
+.description {
+	width: 150%;
+	margin-left: -25% !important;
 }
 
 @media only screen and (min-device-height: 991px) {
