--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,9 @@
 
 .top-banner {
 	position: absolute;
-	left: 0;
+	left: 25%;
 	z-index: 100;
-	width: 100%;
+	width: 50%;
 	font-family: "Montserrat", Arial, sans-serif;
 	color: rgba(255, 255, 255, 0.9);
 	text-align: center;
@@ -58,17 +58,18 @@
 	height: 1550px;
 }
 
-@media only screen and (min-device-height: 991px) {
+@media only screen and (min-device-height: 991px) {	
 	.description {
 	    font-size: 15px !important;
     }
 
-	.top-header {
-		margin-top: 10% !important;
+	.top-header {		
+		top: -7.5% !important;
+		margin-top: 20% !important;
 	}
 	
 	.header-title {
-		color: rgba(255, 255, 255, 0.8)
+		color: rgba(255, 255, 255, 0.8);
 	}
 	
 	.hours {
@@ -94,7 +95,7 @@
 	
 	.header-title {
 		font-size: 25px !important;
-		color: rgba(255, 255, 255, 0.8)
+		color: rgba(255, 255, 255, 0.8);
 	}
 
 	.top-banner {
@@ -109,7 +110,7 @@
 	}
 }
 
-@media only screen and (min-device-height: 400px) and (max-device-height: 800px) {
+@media only screen and (max-device-height: 800px) {
 	.top-header>.heading {
 		font-size: 35px !important;
 	}
