--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,11 @@
 		font-size: 10px;
 		color: rgba(255, 255, 255, 0.9);
 		text-align: center;
-		top: 200px;
+		top: 175px;
+	}
+	
+	#section-home {
+		height: 2000px;
 	}
 }
 
