--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,8 +88,12 @@
     }
 
 	.top-header {
-		margin-top: 5% !important;
-		margin-bottom: 15% !important;
+		margin-top: -25% !important;
+	}
+
+	.top-banner {
+		padding-top: -20% !important;
+		font-size: 12px;
 	}
 	
 	.header-title {
@@ -108,8 +112,7 @@
     }
 
 	.top-header {
-		margin-top: 10% !important;
-		margin-bottom: 25% !important;
+		margin-top: -27.5% !important;
 	}
 	
 	.header-title {
